Added wrapper element to address horizontal scrolling issue on mobile view

--- a/public/exhibitions.html
+++ b/public/exhibitions.html
@@ -7,62 +7,52 @@
     <link rel="stylesheet" href="../static/css/main.css" />
   </head>
   <body>
-    <nav>
-      <a href="index.html" class="logo-image"> </a>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="exhibitions.html">Exhibitions</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-      </div>
-    </nav>
-    <div class="exhibit-container">
-      <a href="exhibitions/sin-corner.html">
-        <div id="sin-corner-tile" class="exhibit">
-        <div class="exhibit-name">
-          SIN CORNER
+    <div class="wrapper">
+      <nav>
+        <a href="index.html" class="logo-image"> </a>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
         </div>
+      </nav>
+      <div class="exhibit-container">
+        <a href="exhibitions/sin-corner.html">
+          <div id="sin-corner-tile" class="exhibit">
+            <div class="exhibit-name">SIN CORNER</div>
+          </div>
+        </a>
+        <a href="exhibitions/old-and-weary.html">
+          <div id="old-and-weary-tile" class="exhibit">
+            <div class="exhibit-name">OLD AND WEARY</div>
+          </div>
+        </a>
+        <a href="exhibitions/breath.html">
+          <div id="breath-tile" class="exhibit">
+            <div class="exhibit-name">BREATH</div>
+          </div>
+        </a>
+        <a href="exhibitions/dust.html">
+          <div id="dust-tile" class="exhibit">
+            <div class="exhibit-name">DUST</div>
+          </div>
+        </a>
+        <a href="exhibitions/graft.html">
+          <div id="graft-tile" class="exhibit">
+            <div class="exhibit-name">GRAFT</div>
+          </div>
+        </a>
+        <a href="exhibitions/essays.html">
+          <div id="essays-tile" class="exhibit">
+            <div class="exhibit-name">ESSAYS</div>
+          </div>
+        </a>
       </div>
-      </a>
-      <a href="exhibitions/old-and-weary.html">
-      <div id="old-and-weary-tile" class="exhibit">
-        <div class="exhibit-name">
-          OLD AND WEARY
-        </div>
-      </div>
-      </a>
-      <a href="exhibitions/breath.html">
-      <div id="breath-tile" class="exhibit">
-        <div class="exhibit-name">
-          BREATH
-        </div>
-      </div>
-      </a>
-      <a href="exhibitions/dust.html">
-      <div id="dust-tile" class="exhibit">
-        <div class="exhibit-name">
-          DUST
-        </div>
-      </div>
-    </a>
-    <a href="exhibitions/graft.html">
-      <div id="graft-tile" class="exhibit">
-        <div class="exhibit-name">
-          GRAFT
-        </div>
-      </div>
-    </a>
-    <a href="exhibitions/essays.html">
-      <div id="essays-tile" class="exhibit">
-        <div class="exhibit-name">
-          ESSAYS
-        </div>
-      </div>
-    </a>
     </div>
     <script src="../static/js/main.js"></script>
   </body>
