--- a/public/exhibitions/old-and-weary.html
+++ b/public/exhibitions/old-and-weary.html
@@ -7,106 +7,108 @@
     <link rel="stylesheet" href="../../static/css/main.css" />
   </head>
   <body>
-    <nav>
-      <a href="../index.html" class="logo-image"> </a>
-      <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../exhibitions.html">Exhibitions</a></li>
-        <li><a href="../contact.html">Contact</a></li>
-        <li><a href="../resume.html">Resume</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
+    <div class="wrapper">
+      <nav>
+        <a href="../index.html" class="logo-image"> </a>
+        <ul class="nav-links">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../exhibitions.html">Exhibitions</a></li>
+          <li><a href="../contact.html">Contact</a></li>
+          <li><a href="../resume.html">Resume</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+        </div>
+      </nav>
+      <div class="gallery-name">
+        <h1>OLD AND WEARY</h1>
       </div>
-    </nav>
-    <div class="gallery-name">
-      <h1>OLD AND WEARY</h1>
+      <section class="gallery-container">
+        <div class="old-and-weary-gallery-container">
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-01.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <!-- <h2></h2> -->
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-02.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>BLADDER HEAD: Bronze, Steel, Gold Leaf. 180 x 30 x 30 (cm).</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-03.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>BLADDER HEAD: Detail</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-04.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>BALLOON HEAD: Wax and Wood. 50 x 50 x 25 (cm).</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-05.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>MARS: Wax, Wood and Pigment. 90 x 90 x 12 (cm).</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-06.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>ON/OFF: Wood, Wax, Bulb, and Battery. 40 x 50 x 16 (cm).</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-07.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>ON/OFF: Wood, Wax, Bulb, and Battery. 40 x 50 x 16 (cm).</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-08.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>HOWE: Plastic, Wax and Wood. 30 x 20 x 10 (cm)</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-09.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>PORTRAIT: Wood, Wax and Gold Leaf. 60 x 40 x 12 (cm).</h2>
+          </div>
+          <div class="gallery-item-container">
+            <img
+              src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-10.jpg"
+              class="gallery-item"
+              alt=""
+            />
+            <h2>MICKEY: Wax, Wood and Pigment. 34 x 30 x 17 (cm).</h2>
+          </div>
+        </div>
+      </section>
     </div>
-    <section class="gallery-container">
-      <div class="old-and-weary-gallery-container">
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-01.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <!-- <h2></h2> -->
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-02.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>BLADDER HEAD: Bronze, Steel, Gold Leaf. 180 x 30 x 30 (cm).</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-03.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>BLADDER HEAD: Detail</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-04.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>BALLOON HEAD: Wax and Wood. 50 x 50 x 25 (cm).</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-05.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>MARS: Wax, Wood and Pigment. 90 x 90 x 12 (cm).</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-06.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>ON/OFF: Wood, Wax, Bulb, and Battery. 40 x 50 x 16 (cm).</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-07.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>ON/OFF: Wood, Wax, Bulb, and Battery. 40 x 50 x 16 (cm).</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-08.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>HOWE: Plastic, Wax and Wood. 30 x 20 x 10 (cm)</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-09.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>PORTRAIT: Wood, Wax and Gold Leaf. 60 x 40 x 12 (cm).</h2>
-        </div>
-        <div class="gallery-item-container">
-          <img
-            src="../../static/img/exhibitions/02-old-and-weary/old-and-weary-10.jpg"
-            class="gallery-item"
-            alt=""
-          />
-          <h2>MICKEY: Wax, Wood and Pigment. 34 x 30 x 17 (cm).</h2>
-        </div>
-      </div>
-    </section>
     <script src="../../static/js/main.js"></script>
   </body>
 </html>
