--- a/public/resume.html
+++ b/public/resume.html
@@ -7,171 +7,173 @@
     <link rel="stylesheet" href="../static/css/main.css" />
   </head>
   <body>
-    <nav>
-      <a href="index.html" class="logo-image"> </a>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="exhibitions.html">Exhibitions</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-      </div>
-    </nav>
-    <div class="resume-container">
-      <div class="cv-heading">
-        <h2>SHORT <span>C.V.</span></h2>
-      </div>
-      <div class="cv-intro">
-        <p>
-          Ben Reilly Graduated Crawford College of Art and Design, 1987;<br />
-          Completed a BA in Archaeology, University College Cork, 1995;<br />
-          Received a MA in Fine Art Sculpture, Winchester College of Art and
-          Design, 1999. <br />
-          He has worked consistently as an Artist since 197 and has had solo
-          exhibitions across Ireland and in Germany (Berlin/Munster). <br />
-          Ben has participated in group shows in Europe, China and America. He
-          has been in recite of a Department of Education Scholarship award,
-          Irish Arts Council Bursary, and Materials Grant, Claremorris Open
-          Adjudicators Award and a Culture Ireland Grant.<br />
-          In addition to his artistic work, Ben has worked as a film
-          projectionist e.g. Cork Film Festival (1988/1995) and as an
-          Archaeologist (1991/2002).
-        </p>
-        <p>
-          He is at present a full time Fine Art Lecturer in the Department of
-          Creative and Performing Arts at Waterford Institute of Technology.
-        </p>
-      </div>
-      <div class="cv-table">
-        <table>
-          <tr>
-            <td>2021</td>
-            <td>Solo show Garter Lane Art Centre Waterford.</td>
-          </tr>
-          <tr>
-            <td>2020</td>
-            <td>Fuzzy Logic Group show, 126 Gallery Galway.</td>
-          </tr>
-          <tr>
-            <td>2019</td>
-            <td>
-              Soul Noir festival, Laragh House Laragh, Maynooth, Co. Kildare.
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Graft solo show Studio 12, Wandesford Quay, Cork.</td>
-          </tr>
-          <tr>
-            <td>2018</td>
-            <td>R.H.A. annual group show.</td>
-          </tr>
-          <tr>
-            <td>2017</td>
-            <td>Elsewhere group show, Wandesford Quay Gallery, Cork.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>
-              The Old and The Weary, solo show, Goma Gallery, Waterford.
-              <em>Catalogue with Essay By Dara Waldron.</em>
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Claremorris Open Exhibition, Claremorris, Co. Mayo.</td>
-          </tr>
-          <tr>
-            <td>2016</td>
-            <td>Open studios exhibition, GlogauAIR studios Berlin.</td>
-          </tr>
-          <tr>
-            <td>2015</td>
-            <td>
-              Silver part I and II Backwater Group Show at Garter Lane Waterford
-              and Uillin West Cork Arts Centres.
-            </td>
-          </tr>
-          <tr>
-            <td>2014</td>
-            <td>Royal Ulster Academy Annual Group Show, Belfast.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>
-              Deception & Sacrifice the Lion, Bear and the Fox, Group show at
-              the 42nd Southern Graphic Council, San Francisco.
-            </td>
-          </tr>
-          <tr>
-            <td>2013</td>
-            <td>Royal Hibernian annual group show.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Ordinary Things group show, Wandesford Quay Gallery, Cork</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>
-              Sin Corner solo show, Triskel Arts Centre, Cork,
-              <em>Catalogue with Essay By Sarah Kelleher. </em>
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>
-              There's nothing on this fecing side for Christ sake, & Train,
-              Crawford Municipal Gallery, Moving Image Collection.
-            </td>
-          </tr>
-          <tr>
-            <td>2012</td>
-            <td>Cyclops, solo show, Ennistymon Courthouse Gallery.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Space Place, group show, Wandesford Quay Gallery, Cork.</td>
-          </tr>
-          <tr>
-            <td>2011</td>
-            <td>
-              Print Residency at the Kloster Bentlage Cultural Centre and
-              Museum, Munster, Germany, and solo show Pluto at StadMuseum,
-              Borken, Munster.
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Culture Ireland Grant.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Red, group show at Soma Contemporary, Waterford.</td>
-          </tr>
-          <tr>
-            <td>2010</td>
-            <td>Excavate, Cork Printmakers group show, Cork Museum.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Zeppelin, solo show, South Tipp Art Centre, Clonmel.</td>
-          </tr>
-          <tr>
-            <td>2009</td>
-            <td>
-              Submarine, solo show at Galerie R31, Neuköln, Berlin,
-              <em> Catalogue with Essay By Hilary Pyle. </em>
-            </td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>Then + Now, group show, Gluxman Gallery, U.C.C., Cork.</td>
-          </tr>
-        </table>
+    <div class="wrapper">
+      <nav>
+        <a href="index.html" class="logo-image"> </a>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+        </div>
+      </nav>
+      <div class="resume-container">
+        <div class="cv-heading">
+          <h2>SHORT <span>C.V.</span></h2>
+        </div>
+        <div class="cv-intro">
+          <p>
+            Ben Reilly Graduated Crawford College of Art and Design, 1987;<br />
+            Completed a BA in Archaeology, University College Cork, 1995;<br />
+            Received a MA in Fine Art Sculpture, Winchester College of Art and
+            Design, 1999. <br />
+            He has worked consistently as an Artist since 197 and has had solo
+            exhibitions across Ireland and in Germany (Berlin/Munster). <br />
+            Ben has participated in group shows in Europe, China and America. He
+            has been in recite of a Department of Education Scholarship award,
+            Irish Arts Council Bursary, and Materials Grant, Claremorris Open
+            Adjudicators Award and a Culture Ireland Grant.<br />
+            In addition to his artistic work, Ben has worked as a film
+            projectionist e.g. Cork Film Festival (1988/1995) and as an
+            Archaeologist (1991/2002).
+          </p>
+          <p>
+            He is at present a full time Fine Art Lecturer in the Department of
+            Creative and Performing Arts at Waterford Institute of Technology.
+          </p>
+        </div>
+        <div class="cv-table">
+          <table>
+            <tr>
+              <td>2021</td>
+              <td>Solo show Garter Lane Art Centre Waterford.</td>
+            </tr>
+            <tr>
+              <td>2020</td>
+              <td>Fuzzy Logic Group show, 126 Gallery Galway.</td>
+            </tr>
+            <tr>
+              <td>2019</td>
+              <td>
+                Soul Noir festival, Laragh House Laragh, Maynooth, Co. Kildare.
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Graft solo show Studio 12, Wandesford Quay, Cork.</td>
+            </tr>
+            <tr>
+              <td>2018</td>
+              <td>R.H.A. annual group show.</td>
+            </tr>
+            <tr>
+              <td>2017</td>
+              <td>Elsewhere group show, Wandesford Quay Gallery, Cork.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                The Old and The Weary, solo show, Goma Gallery, Waterford.
+                <em>Catalogue with Essay By Dara Waldron.</em>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Claremorris Open Exhibition, Claremorris, Co. Mayo.</td>
+            </tr>
+            <tr>
+              <td>2016</td>
+              <td>Open studios exhibition, GlogauAIR studios Berlin.</td>
+            </tr>
+            <tr>
+              <td>2015</td>
+              <td>
+                Silver part I and II Backwater Group Show at Garter Lane
+                Waterford and Uillin West Cork Arts Centres.
+              </td>
+            </tr>
+            <tr>
+              <td>2014</td>
+              <td>Royal Ulster Academy Annual Group Show, Belfast.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                Deception & Sacrifice the Lion, Bear and the Fox, Group show at
+                the 42nd Southern Graphic Council, San Francisco.
+              </td>
+            </tr>
+            <tr>
+              <td>2013</td>
+              <td>Royal Hibernian annual group show.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Ordinary Things group show, Wandesford Quay Gallery, Cork</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                Sin Corner solo show, Triskel Arts Centre, Cork,
+                <em>Catalogue with Essay By Sarah Kelleher. </em>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                There's nothing on this fecing side for Christ sake, & Train,
+                Crawford Municipal Gallery, Moving Image Collection.
+              </td>
+            </tr>
+            <tr>
+              <td>2012</td>
+              <td>Cyclops, solo show, Ennistymon Courthouse Gallery.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Space Place, group show, Wandesford Quay Gallery, Cork.</td>
+            </tr>
+            <tr>
+              <td>2011</td>
+              <td>
+                Print Residency at the Kloster Bentlage Cultural Centre and
+                Museum, Munster, Germany, and solo show Pluto at StadMuseum,
+                Borken, Munster.
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Culture Ireland Grant.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Red, group show at Soma Contemporary, Waterford.</td>
+            </tr>
+            <tr>
+              <td>2010</td>
+              <td>Excavate, Cork Printmakers group show, Cork Museum.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Zeppelin, solo show, South Tipp Art Centre, Clonmel.</td>
+            </tr>
+            <tr>
+              <td>2009</td>
+              <td>
+                Submarine, solo show at Galerie R31, Neuköln, Berlin,
+                <em> Catalogue with Essay By Hilary Pyle. </em>
+              </td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Then + Now, group show, Gluxman Gallery, U.C.C., Cork.</td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
     <script src="../static/js/main.js"></script>
