--- a/public/contact.html
+++ b/public/contact.html
@@ -7,41 +7,43 @@
     <link rel="stylesheet" href="../static/css/main.css" />
   </head>
   <body>
-    <div class="container">
-      <nav>
-        <a href="index.html" class="logo-image"> </a>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="resume.html">Resume</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-        </div>
-      </nav>
-      <form id="contact-form" action="">
-        <div class="form-field">
-          <label for="name">Full Name <span>*</span></label>
-          <input id="name" name="name" type="text" required />
-        </div>
-        <div class="form-field">
-          <label for="email">Email <span>*</span></label>
-          <input id="email" name="email" type="email" required />
-        </div>
-        <div class="form-field">
-          <label for="phone">Phone Number (optional)</label>
-          <input id="phone" name="phone" type="tel" />
-        </div>
-        <div class="form-field">
-          <label for="message">Message <span>*</span></label>
-          <textarea name="message" id="message" rows="5" required></textarea>
-        </div>
-        <div class="form-field">
-          <button>Send Message</button>
-        </div>
-      </form>
+    <div class="wrapper">
+      <div class="container">
+        <nav>
+          <a href="index.html" class="logo-image"> </a>
+          <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="exhibitions.html">Exhibitions</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resume.html">Resume</a></li>
+          </ul>
+          <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+          </div>
+        </nav>
+        <form id="contact-form" action="">
+          <div class="form-field">
+            <label for="name">Full Name <span>*</span></label>
+            <input id="name" name="name" type="text" required />
+          </div>
+          <div class="form-field">
+            <label for="email">Email <span>*</span></label>
+            <input id="email" name="email" type="email" required />
+          </div>
+          <div class="form-field">
+            <label for="phone">Phone Number (optional)</label>
+            <input id="phone" name="phone" type="tel" />
+          </div>
+          <div class="form-field">
+            <label for="message">Message <span>*</span></label>
+            <textarea name="message" id="message" rows="5" required></textarea>
+          </div>
+          <div class="form-field">
+            <button>Send Message</button>
+          </div>
+        </form>
+      </div>
     </div>
     <script src="../static/js/main.js"></script>
   </body>
