--- a/public/exhibitions/essays.html
+++ b/public/exhibitions/essays.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../static/css/main.css" />
   </head>
   <body>
+    <div class="wrapper">
     <nav>
       <a href="../index.html" class="logo-image"> </a>
       <ul class="nav-links">
@@ -340,6 +341,7 @@
         </div>
       </div>
     </section>
+  </div>
     <script src="../../static/js/main.js"></script>
   </body>
 </html>
