--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,36 @@
   </head>
 
   <body>
-    <nav>
-      <a href="index.html" class="logo-image"> </a>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="exhibitions.html">Exhibitions</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-      </div>
-    </nav>
-    <div class="m-home-page">
-      <div class="m-home-page-image">
-        <img src="../static/img/exhibitions/02-old-and-weary/old-and-weary-01.jpg" alt="">
-      </div>
-      <div class="m-home-page-menu">
-        <ul>
+    <div class="wrapper">
+      <nav>
+        <a href="index.html" class="logo-image"> </a>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
           <li><a href="exhibitions.html">Exhibitions</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
-        </ul>  
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+        </div>
+      </nav>
+      <div? class="m-home-page">
+        <div class="m-home-page-image">
+          <img
+            src="../static/img/exhibitions/02-old-and-weary/old-and-weary-01.jpg"
+            alt=""
+          />
+        </div>
+        <div class="m-home-page-menu">
+          <ul>
+            <li><a href="exhibitions.html">Exhibitions</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resume.html">Resume</a></li>
+          </ul>
+        </div>
       </div>
+      <script src="../static/js/main.js"></script>
     </div>
-    <script src="../static/js/main.js"></script>
   </body>
 </html>
