Fixed tag for mobile homepage element

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           <div class="line2"></div>
         </div>
       </nav>
-      <div? class="m-home-page">
+      <div class="m-home-page">
         <div class="m-home-page-image">
           <img
             src="../static/img/exhibitions/02-old-and-weary/old-and-weary-01.jpg"
