Added class names to nav links for display purposes

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
         <a href="index.html" class="logo-image"> </a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li class="sm-screen-links"><a href="exhibitions.html">Exhibitions</a></li>
           <div class="full-screen-links">
-            <li class="slide-links"><a href="../public/exhibitions/sin-corner.html">Sin Corner</a></li>
-            <li class="slide-links"><a href="../public/exhibitions/old-and-weary.html">Old and Weary</a></li>
-            <li class="slide-links"><a href="../public/exhibitions/breath.html">Breath</a></li>
-            <li class="slide-links"><a href="../public/exhibitions/dust.html">Dust</a></li>
-            <li class="slide-links"><a href="../public/exhibitions/graft.html">Graft</a></li>
-            <li class="slide-links"><a href="../public/exhibitions/essays.html">Essays</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/sin-corner.html">Sin Corner</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/old-and-weary.html">Old and Weary</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/breath.html">Breath</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/dust.html">Dust</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/graft.html">Graft</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/essays.html">Essays</a></li>
           </div>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
