Updated classes and selectors for differing screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -30,19 +30,24 @@
           <div class="line2"></div>
         </div>
       </nav>
-      <div class="m-home-page">
-        <div class="m-home-page-image">
+      <div class="sm-home-page">
+        <div class="sm-home-page-image">
           <img
             src="../static/img/exhibitions/02-old-and-weary/old-and-weary-01.jpg"
             alt=""
           />
         </div>
-        <div class="m-home-page-menu">
+        <div class="sm-home-page-menu">
           <ul>
             <li><a href="exhibitions.html">Exhibitions</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="resume.html">Resume</a></li>
           </ul>
+        </div>
+      </div>
+      <div class="lg-home-page">
+        <div class="lg-home-page-gallery">
+          
         </div>
       </div>
       <script src="../static/js/main.js"></script>
