Added structure for picture links on larger screen homepage

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,14 @@
         </div>
       </div>
       <div class="lg-home-page">
-        <div class="lg-home-page-gallery">
-          
+        <div class="lg-home-page-exhibition-links">
+          <div id="sin-corner-homepage-link" class="exhibition-link">
+            <a href="../public/exhibitions/old-and-weary.html">
+              <div class="exhibition-link-label">
+                <h1>Sin Corner</h1>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
       <script src="../static/js/main.js"></script>
