--- a/public/exhibitions/essays.html
+++ b/public/exhibitions/essays.html
@@ -9,12 +9,20 @@
   <body>
     <div class="wrapper">
       <nav>
-        <a href="../index.html" class="logo-image"> </a>
+        <a href="index.html" class="logo-image"> </a>
         <ul class="nav-links">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../exhibitions.html">Exhibitions</a></li>
-          <li><a href="../contact.html">Contact</a></li>
-          <li><a href="../resume.html">Resume</a></li>
+          <li class="sm-screen-links"><a href="exhibitions.html">Exhibitions</a></li>
+          <div class="full-screen-links">
+            <li class="lg-screen-links"><a href="sin-corner.html">Sin Corner</a></li>
+            <li class="lg-screen-links"><a href="old-and-weary.html">Old and Weary</a></li>
+            <li class="lg-screen-links"><a href="breath.html">Breath</a></li>
+            <li class="lg-screen-links"><a href="dust.html">Dust</a></li>
+            <li class="lg-screen-links"><a href="graft.html">Graft</a></li>
+            <li class="lg-screen-links"><a href="essays.html">Essays</a></li>
+          </div>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="resume.html">Resume</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
