Fixed links for larger screen format

--- a/public/contact.html
+++ b/public/contact.html
@@ -8,19 +8,26 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="container">
         <nav>
           <a href="index.html" class="logo-image"> </a>
-          <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="exhibitions.html">Exhibitions</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
-          <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li class="sm-screen-links"><a href="exhibitions.html">Exhibitions</a></li>
+          <div class="full-screen-links">
+            <li class="lg-screen-links"><a href="../public/exhibitions/sin-corner.html">Sin Corner</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/old-and-weary.html">Old and Weary</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/breath.html">Breath</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/dust.html">Dust</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/graft.html">Graft</a></li>
+            <li class="lg-screen-links"><a href="../public/exhibitions/essays.html">Essays</a></li>
           </div>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+        </div>
         </nav>
         <form id="contact-form" action="">
           <div class="form-field">
@@ -43,7 +50,6 @@
             <button>Send Message</button>
           </div>
         </form>
-      </div>
     </div>
     <script src="../static/js/main.js"></script>
   </body>
