--- a/public/exhibitions/dust.html
+++ b/public/exhibitions/dust.html
@@ -29,6 +29,7 @@
           <div class="line2"></div>
         </div>
       </nav>
+      <div class="full-screen-gallery">
       <div class="gallery-name">
         <h1>DUST</h1>
       </div>
@@ -100,6 +101,7 @@
           </div>
         </div>
       </section>
+    </div>
     </div>
     <script src="../../static/js/main.js"></script>
   </body>
