--- a/public/exhibitions/old-and-weary.html
+++ b/public/exhibitions/old-and-weary.html
@@ -21,14 +21,15 @@
             <li class="lg-screen-links"><a href="graft.html">Graft</a></li>
             <li class="lg-screen-links"><a href="essays.html">Essays</a></li>
           </div>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="../contact.html">Contact</a></li>
+          <li><a href="../resume.html">Resume</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
         </div>
       </nav>
+      <div class="full-screen-gallery">
       <div class="gallery-name">
         <h1>OLD AND WEARY</h1>
       </div>
@@ -116,6 +117,7 @@
           </div>
         </div>
       </section>
+    </div>
     </div>
     <script src="../../static/js/main.js"></script>
   </body>
