--- a/public/index.html
+++ b/public/index.html
@@ -47,12 +47,48 @@
       </div>
       <div class="lg-home-page">
         <div class="lg-home-page-exhibition-links">
-          <div id="sin-corner-homepage-link" class="exhibition-link">
-            <a href="../public/exhibitions/old-and-weary.html">
+          <a href="../public/exhibitions/sin-corner.html">
+            <div id="sin-corner-homepage-link" class="exhibition-link">
               <div class="exhibition-link-label">
                 <h1>Sin Corner</h1>
               </div>
-            </a>
+            </div>
+          </a>
+          <a href="../public/exhibitions/old-and-weary.html">
+            <div id="old-and-weary-homepage-link" class="exhibition-link">
+              <div class="exhibition-link-label">
+                <h1>Old and Weary</h1>
+              </div>
+            </div>
+          </a>
+          <a href="../public/exhibitions/breath.html">
+            <div id="breath-homepage-link" class="exhibition-link">
+              <div class="exhibition-link-label">
+                <h1>Breath</h1>
+              </div>
+            </div>
+          </a>
+          <a href="../public/exhibitions/dust.html">
+            <div id="dust-homepage-link" class="exhibition-link">
+              <div class="exhibition-link-label">
+                <h1>Dust</h1>
+              </div>
+            </div>
+          </a>
+          <a href="../public/exhibitions/graft.html">
+            <div id="graft-homepage-link" class="exhibition-link">
+              <div class="exhibition-link-label">
+                <h1>Graft</h1>
+              </div>
+            </div>
+          </a>
+          <a href="../public/exhibitions/essays.html">
+            <div id="essays-homepage-link" class="exhibition-link">
+              <div class="exhibition-link-label">
+                <h1>Essays</h1>
+              </div>
+            </div>
+          </a>
           </div>
         </div>
       </div>
